fix(ci): test setting a specific neovim version

--- a/.github/workflows/install.yaml
+++ b/.github/workflows/install.yaml
@@ -49,7 +49,7 @@ jobs:
         uses: rhysd/action-setup-vim@v1
         with:
           neovim: true
-          version: nightly
+          version: v0.6.1
 
       - name: Install LunarVim
         timeout-minutes: 4
